--- a/src/teaeli/AddNewBlend.form
+++ b/src/teaeli/AddNewBlend.form
@@ -66,7 +66,13 @@
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="1" attributes="0">
+                              <Group type="102" attributes="0">
+                                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <Component id="blendCategoryCombo" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                              </Group>
+                              <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" attributes="0">
                                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
@@ -79,24 +85,11 @@
                                       </Group>
                                       <Component id="jScrollPane4" min="-2" pref="418" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace pref="22" max="32767" attributes="0"/>
+                                  <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jScrollPane3" alignment="1" min="-2" pref="402" max="-2" attributes="0"/>
-                                      <Component id="baseAddBtn" alignment="1" min="-2" max="-2" attributes="0"/>
+                                      <Component id="baseCombo" alignment="1" min="-2" pref="200" max="-2" attributes="0"/>
                                   </Group>
-                              </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                  <Component id="jLabel5" min="-2" pref="38" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="baseCombo" min="-2" pref="200" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
-                                  <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="blendCategoryCombo" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
@@ -109,15 +102,23 @@
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Component id="ingPerAddBtn" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="101" max="-2" attributes="0"/>
-                                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="flavourCombo" min="-2" pref="200" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="flavourPerTxt" min="-2" pref="50" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="flavourPerAddBtn" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="102" attributes="0">
+                                          <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="flavourCombo" min="-2" pref="200" max="-2" attributes="0"/>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Component id="flavourPerTxt" min="-2" pref="50" max="-2" attributes="0"/>
+                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                          <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace pref="11" max="32767" attributes="0"/>
+                                          <Component id="flavourPerAddBtn" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" attributes="0">
+                                          <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      </Group>
+                                  </Group>
                               </Group>
                           </Group>
                       </Group>
@@ -137,7 +138,6 @@
                       <Component id="blendCodeTxt" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="jLabel5" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="baseCombo" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="baseAddBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -228,6 +228,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="ingPerTxt">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ingPerTxtActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
           <Properties>
@@ -305,7 +308,7 @@
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="Base "/>
+            <Property name="text" type="java.lang.String" value="Base Composition "/>
           </Properties>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane3">
@@ -390,14 +393,6 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="baseAddBtn">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Add"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="baseAddBtnActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JLabel" name="jLabel8">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
@@ -409,37 +404,16 @@
         <Component class="javax.swing.JComboBox" name="blendCategoryCombo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="30">
-                <StringItem index="0" value="Artisian Special V26"/>
-                <StringItem index="1" value="Artisian Special V27"/>
-                <StringItem index="2" value="Artisian Special V28"/>
-                <StringItem index="3" value="Artisian Special V29"/>
-                <StringItem index="4" value="Artisian Special V30"/>
-                <StringItem index="5" value="Artisian Special V31"/>
-                <StringItem index="6" value="Artisian Special V32"/>
-                <StringItem index="7" value="Artisian Special V33"/>
-                <StringItem index="8" value="Artisian Special V34"/>
-                <StringItem index="9" value="Artisian Special V35"/>
-                <StringItem index="10" value="Artisian Special V36"/>
-                <StringItem index="11" value="Artisian Special V37"/>
-                <StringItem index="12" value="Artisian Special V38"/>
-                <StringItem index="13" value="Artisian Special V39"/>
-                <StringItem index="14" value="Artisian Special V40"/>
-                <StringItem index="15" value="Artisian Special V41"/>
-                <StringItem index="16" value="Artisian Special V42"/>
-                <StringItem index="17" value="Artisian Special V43"/>
-                <StringItem index="18" value="Artisian Special V44"/>
-                <StringItem index="19" value="Artisian Special V45"/>
-                <StringItem index="20" value="Artisian Special V46"/>
-                <StringItem index="21" value="Artisian Special V47"/>
-                <StringItem index="22" value="Artisian Special V48"/>
-                <StringItem index="23" value="Artisian Special V49"/>
-                <StringItem index="24" value="Artisian Special V50"/>
-                <StringItem index="25" value="Black"/>
-                <StringItem index="26" value="Green Tea"/>
-                <StringItem index="27" value="Organic Black"/>
-                <StringItem index="28" value="Infusions"/>
-                <StringItem index="29" value="Iced Teas"/>
+              <StringArray count="9">
+                <StringItem index="0" value="Artisian Special V2"/>
+                <StringItem index="1" value="Artisian Special V26"/>
+                <StringItem index="2" value="Black"/>
+                <StringItem index="3" value="Green Tea"/>
+                <StringItem index="4" value="Organic Black"/>
+                <StringItem index="5" value="Organic Green"/>
+                <StringItem index="6" value="Organic Infusion"/>
+                <StringItem index="7" value="Infusions"/>
+                <StringItem index="8" value="Iced Teas"/>
               </StringArray>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
