--- a/src/teaeli/BlendDetails.form
+++ b/src/teaeli/BlendDetails.form
@@ -405,37 +405,16 @@
         <Component class="javax.swing.JComboBox" name="blendCategoryCombo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="30">
-                <StringItem index="0" value="Artisian Special V26"/>
-                <StringItem index="1" value="Artisian Special V27"/>
-                <StringItem index="2" value="Artisian Special V28"/>
-                <StringItem index="3" value="Artisian Special V29"/>
-                <StringItem index="4" value="Artisian Special V30"/>
-                <StringItem index="5" value="Artisian Special V31"/>
-                <StringItem index="6" value="Artisian Special V32"/>
-                <StringItem index="7" value="Artisian Special V33"/>
-                <StringItem index="8" value="Artisian Special V34"/>
-                <StringItem index="9" value="Artisian Special V35"/>
-                <StringItem index="10" value="Artisian Special V36"/>
-                <StringItem index="11" value="Artisian Special V37"/>
-                <StringItem index="12" value="Artisian Special V38"/>
-                <StringItem index="13" value="Artisian Special V39"/>
-                <StringItem index="14" value="Artisian Special V40"/>
-                <StringItem index="15" value="Artisian Special V41"/>
-                <StringItem index="16" value="Artisian Special V42"/>
-                <StringItem index="17" value="Artisian Special V43"/>
-                <StringItem index="18" value="Artisian Special V44"/>
-                <StringItem index="19" value="Artisian Special V45"/>
-                <StringItem index="20" value="Artisian Special V46"/>
-                <StringItem index="21" value="Artisian Special V47"/>
-                <StringItem index="22" value="Artisian Special V48"/>
-                <StringItem index="23" value="Artisian Special V49"/>
-                <StringItem index="24" value="Artisian Special V50"/>
-                <StringItem index="25" value="Black"/>
-                <StringItem index="26" value="Green Tea"/>
-                <StringItem index="27" value="Organic Black"/>
-                <StringItem index="28" value="Infusions"/>
-                <StringItem index="29" value="Iced Teas"/>
+              <StringArray count="9">
+                <StringItem index="0" value="Artisian Special V2"/>
+                <StringItem index="1" value="Artisian Special V26"/>
+                <StringItem index="2" value="Black"/>
+                <StringItem index="3" value="Green Tea"/>
+                <StringItem index="4" value="Organic Black"/>
+                <StringItem index="5" value="Organic Green"/>
+                <StringItem index="6" value="Organic Infusion"/>
+                <StringItem index="7" value="Infusions"/>
+                <StringItem index="8" value="Iced Teas"/>
               </StringArray>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
